@@ -67,7 +67,7 @@
 #include "memcached.h"
 
 /*
- * forward declarations 
+ * forward declarations
  */
 static void drive_machine(conn *c);
 static int new_socket(const bool is_udp);
@@ -274,7 +274,7 @@ static void conn_init(void) {
 }
 
 /*@null@*/
-static conn *conn_new(const int sfd, const int init_state, const int event_flags, 
+static conn *conn_new(const int sfd, const int init_state, const int event_flags,
                       const int read_buffer_size, const bool is_udp) {
     conn *c;
 
@@ -486,7 +486,7 @@ static void conn_shrink(conn *c) {
             c->ilist = newbuf;
             c->isize = ITEM_LIST_INITIAL;
         }
-	/* TODO check error condition? */
+    /* TODO check error condition? */
     }
 
     if (c->msgsize > MSG_LIST_HIGHWAT) {
@@ -495,7 +495,7 @@ static void conn_shrink(conn *c) {
             c->msglist = newbuf;
             c->msgsize = MSG_LIST_INITIAL;
         }
-	/* TODO check error condition? */
+    /* TODO check error condition? */
     }
 
     if (c->iovsize > IOV_LIST_HIGHWAT) {
@@ -504,7 +504,7 @@ static void conn_shrink(conn *c) {
             c->iov = newbuf;
             c->iovsize = IOV_LIST_INITIAL;
         }
-	/* TODO check return value */
+    /* TODO check return value */
     }
 }
 
@@ -749,14 +749,14 @@ typedef struct token_s {
 #define KEY_TOKEN 1
 #define KEY_MAX_LENGTH 250
 
-#define MAX_TOKENS 6 
+#define MAX_TOKENS 6
 
 /*
  * Tokenize the command string by replacing whitespace with '\0' and update
  * the token array tokens with pointer to start of each token and length.
  * Returns total number of tokens.  The last valid token is the terminal
  * token (value points to the first unprocessed character of the string and
- * length zero).  
+ * length zero).
  *
  * Usage example:
  *
@@ -774,12 +774,12 @@ static size_t tokenize_command(char *command, token_t *tokens, const size_t max_
     size_t length = 0;
     size_t ntokens = 0;
 
-    assert(command != NULL && tokens != NULL && max_tokens > 1); 
+    assert(command != NULL && tokens != NULL && max_tokens > 1);
 
     cp = command;
     while(*cp != '\0' && ntokens < max_tokens - 1) {
         if(*cp == ' ') {
-            // If we've accumulated a token, this is the end of it. 
+            // If we've accumulated a token, this is the end of it.
             if(length > 0) {
                 tokens[ntokens].value = value;
                 tokens[ntokens].length = length;
@@ -904,7 +904,7 @@ static void process_stat(conn *c, token_t *tokens, const size_t ntokens) {
             out_string(c, "SERVER_ERROR out of memory");
             return;
         }
-            
+
         fd = open("/proc/self/maps", O_RDONLY);
         if (fd == -1) {
             out_string(c, "SERVER_ERROR cannot open the maps file");
@@ -926,7 +926,7 @@ static void process_stat(conn *c, token_t *tokens, const size_t ntokens) {
         strcpy(wbuf + res, "END\r\n");
         c->write_and_free = wbuf;
         c->wcurr = wbuf;
-        c->wbytes = res + 5; // Don't write the terminal '\0' 
+        c->wbytes = res + 5; // Don't write the terminal '\0'
         conn_set_state(c, conn_write);
         c->write_and_go = conn_read;
         close(fd);
@@ -1031,15 +1031,15 @@ static inline void process_get_command(conn *c, token_t *tokens, size_t ntokens)
 
     do {
         while(key_token->length != 0) {
-            
+
             key = key_token->value;
             nkey = key_token->length;
-            
+
             if(nkey > KEY_MAX_LENGTH) {
                 out_string(c, "CLIENT_ERROR bad command line format");
                 return;
             }
-                
+
             stats.get_cmds++;
             it = get_item(key, nkey);
             if (it) {
@@ -1050,7 +1050,7 @@ static inline void process_get_command(conn *c, token_t *tokens, size_t ntokens)
                         c->ilist = new_list;
                     } else break;
                 }
-                    
+
                 /*
                  * Construct the response. Each hit adds three elements to the
                  * outgoing data list:
@@ -1072,9 +1072,9 @@ static inline void process_get_command(conn *c, token_t *tokens, size_t ntokens)
                 item_update(it);
                 *(c->ilist + i) = it;
                 i++;
-                
+
             } else stats.get_misses++;
-            
+
             key_token++;
         }
 
@@ -1086,16 +1086,16 @@ static inline void process_get_command(conn *c, token_t *tokens, size_t ntokens)
             ntokens = tokenize_command(key_token->value, tokens, MAX_TOKENS);
             key_token = tokens;
         }
-        
+
     } while(key_token->value != NULL);
 
     c->icurr = c->ilist;
     c->ileft = i;
-            
+
     if (settings.verbose > 1)
         fprintf(stderr, ">%d END\n", c->sfd);
     add_iov(c, "END\r\n", 5);
-        
+
     if (c->udp && build_udp_headers(c) != 0) {
         out_string(c, "SERVER_ERROR out of memory");
     }
@@ -1127,12 +1127,12 @@ static void process_update_command(conn *c, token_t *tokens, const size_t ntoken
     flags = strtoul(tokens[2].value, NULL, 10);
     exptime = strtol(tokens[3].value, NULL, 10);
     vlen = strtol(tokens[4].value, NULL, 10);
-    
+
     if(errno == ERANGE || ((flags == 0 || exptime == 0) && errno == EINVAL)) {
         out_string(c, "CLIENT_ERROR bad command line format");
         return;
     }
-    
+
     if (settings.managed) {
         int bucket = c->bucket;
         if (bucket == -1) {
@@ -1158,7 +1158,7 @@ static void process_update_command(conn *c, token_t *tokens, const size_t ntoken
         c->sbytes = vlen + 2;
         return;
     }
-    
+
     c->item_comm = comm;
     c->item = it;
     c->ritem = ITEM_data(it);
@@ -1178,15 +1178,15 @@ static void process_arithmetic_command(conn *c, token_t *tokens, const size_t nt
     char *ptr;
 
     assert(c != NULL);
-    
-    if(tokens[KEY_TOKEN].length > KEY_MAX_LENGTH) { 
+
+    if(tokens[KEY_TOKEN].length > KEY_MAX_LENGTH) {
         out_string(c, "CLIENT_ERROR bad command line format");
         return;
     }
 
     key = tokens[KEY_TOKEN].value;
     nkey = tokens[KEY_TOKEN].length;
-        
+
     if (settings.managed) {
         int bucket = c->bucket;
         if (bucket == -1) {
@@ -1207,7 +1207,7 @@ static void process_arithmetic_command(conn *c, token_t *tokens, const size_t nt
     }
 
     delta = strtoul(tokens[2].value, NULL, 10);
-        
+
     if(errno == ERANGE) {
         out_string(c, "CLIENT_ERROR bad command line format");
         return;
@@ -1215,14 +1215,14 @@ static void process_arithmetic_command(conn *c, token_t *tokens, const size_t nt
 
     ptr = ITEM_data(it);
     while ((*ptr != '\0') && (*ptr < '0' && *ptr > '9')) ptr++;    // BUG: can't be true
-        
+
     value = strtol(ptr, NULL, 10);
 
     if(errno == ERANGE) {
         out_string(c, "CLIENT_ERROR cannot increment or decrement non-numeric value");
         return;
     }
-    
+
     if (incr != 0)
         value += delta;
     else {
@@ -1254,7 +1254,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
     size_t nkey;
     item *it;
     time_t exptime = 0;
-    
+
     assert(c != NULL);
 
     if (settings.managed) {
@@ -1269,7 +1269,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
             return;
         }
     }
-    
+
     key = tokens[KEY_TOKEN].value;
     nkey = tokens[KEY_TOKEN].length;
 
@@ -1280,7 +1280,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
 
     if(ntokens == 4) {
         exptime = strtol(tokens[2].value, NULL, 10);
-        
+
         if(errno == ERANGE) {
             out_string(c, "CLIENT_ERROR bad command line format");
             return;
@@ -1292,7 +1292,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
         out_string(c, "NOT_FOUND");
         return;
     }
-    
+
     if (exptime == 0) {
         item_unlink(it);
         out_string(c, "DELETED");
@@ -1303,8 +1303,8 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
         if (new_delete) {
             todelete = new_delete;
             deltotal *= 2;
-        } else { 
-            /* 
+        } else {
+            /*
              * can't delete it immediately, user wants a delay,
              * but we ran out of memory for the delete queue
              */
@@ -1312,7 +1312,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
             return;
         }
     }
-    
+
     it->refcount++;
     /* use its expiration time as its deletion time now */
     it->exptime = realtime(exptime);
@@ -1323,7 +1323,7 @@ static void process_delete_command(conn *c, token_t *tokens, const size_t ntoken
 }
 
 static void process_command(conn *c, char *command) {
-    
+
     token_t tokens[MAX_TOKENS];
     size_t ntokens;
     int comm;
@@ -1333,11 +1333,11 @@ static void process_command(conn *c, char *command) {
     if (settings.verbose > 1)
         fprintf(stderr, "<%d %s\n", c->sfd, command);
 
-    /* 
+    /*
      * for commands set/add/replace, we build an item and read the data
      * directly into it, then continue in nread_complete().
-     */ 
-    
+     */
+
     c->msgcurr = 0;
     c->msgused = 0;
     c->iovused = 0;
@@ -1351,14 +1351,14 @@ static void process_command(conn *c, char *command) {
     if (ntokens >= 3 &&
         ((strcmp(tokens[COMMAND_TOKEN].value, "get") == 0) ||
          (strcmp(tokens[COMMAND_TOKEN].value, "bget") == 0))) {
-        
+
         process_get_command(c, tokens, ntokens);
 
-    } else if (ntokens == 6 && 
-               ((strcmp(tokens[COMMAND_TOKEN].value, "add") == 0 && (comm = NREAD_ADD)) || 
+    } else if (ntokens == 6 &&
+               ((strcmp(tokens[COMMAND_TOKEN].value, "add") == 0 && (comm = NREAD_ADD)) ||
                 (strcmp(tokens[COMMAND_TOKEN].value, "set") == 0 && (comm = NREAD_SET)) ||
                 (strcmp(tokens[COMMAND_TOKEN].value, "replace") == 0 && (comm = NREAD_REPLACE)))) {
-        
+
         process_update_command(c, tokens, ntokens, comm);
 
     } else if (ntokens == 4 && (strcmp(tokens[COMMAND_TOKEN].value, "incr") == 0)) {
@@ -1379,7 +1379,7 @@ static void process_command(conn *c, char *command) {
             out_string(c, "CLIENT_ERROR not a managed instance");
             return;
         }
-        
+
         if (sscanf(tokens[1].value, "%u:%u", &bucket,&gen) == 2) {
             if ((bucket < 0) || (bucket >= MAX_BUCKETS)) {
                 out_string(c, "CLIENT_ERROR bucket number out of range");
@@ -1435,7 +1435,7 @@ static void process_command(conn *c, char *command) {
         }
 
     } else if (ntokens >= 2 && (strcmp(tokens[COMMAND_TOKEN].value, "stats") == 0)) {
-        
+
         process_stat(c, tokens, ntokens);
 
     } else if (ntokens >= 2 && ntokens <= 3 && (strcmp(tokens[COMMAND_TOKEN].value, "flush_all") == 0)) {
@@ -1459,7 +1459,7 @@ static void process_command(conn *c, char *command) {
         item_flush_expired();
         out_string(c, "OK");
         return;
- 
+
     } else if (ntokens == 2 && (strcmp(tokens[COMMAND_TOKEN].value, "version") == 0)) {
 
         out_string(c, "VERSION " VERSION);
@@ -1467,7 +1467,7 @@ static void process_command(conn *c, char *command) {
     } else if (ntokens == 2 && (strcmp(tokens[COMMAND_TOKEN].value, "quit") == 0)) {
 
         conn_set_state(c, conn_closing);
-        
+
     } else if (ntokens == 5 && (strcmp(tokens[COMMAND_TOKEN].value, "slabs") == 0 &&
                                 strcmp(tokens[COMMAND_TOKEN + 1].value, "reassign") == 0)) {
 #ifdef ALLOW_SLABS_REASSIGN
